Tue Jun 24 00:29:07 1997  Jim Blandy  <jimb@floss.red-bean.com>

	* script.c (scm_compile_shell_switches): Add 1997 to copyright
	years in usage message.

	* Makefile.am (libguile_la_LDFLAGS): Bump library version.
	* Makefile.in: Regenerated.

	* regex-posix.c (scm_init_regex_posix): Delete the regexp/nosub
	flag; I don't think we support it.
	(scm_make_regexp): Make sure the user doesn't pass the
	regexp/nosub flag.

	* regex-posix.c (scm_make_regexp, scm_regexp_exec): Add optional
	FLAGS arguments.
	(scm_init_regex_posix): Define constants for the REG_mumble flags;
	name them according to the SCSH convention: regexp/mumble.

	* regex-posix.h (scm_make_regexp, scm_regexp_exec): Update prototypes.

Mon Jun 23 18:44:49 1997  Jim Blandy  <jimb@floss.red-bean.com>

	* Makefile.am (libpath.h): Include the values of all the standard
	Makefile directory variables.  Print a message, but don't print
	all the commands.
	(versiondat.h): Print a message, but don't print all the commands.
	* load.c: #include "alist.h".
	(init_build_info): New function.
	(scm_init_load): Call it.
	* Makefile.in: Regenerated.

Sun Jun 22 19:12:58 1997  Jim Blandy  <jimb@floss.red-bean.com>

	* root.c: Establish a reliable catch-all handler for the new root.
	After all the Scheme handler function might signal an error too,
	and we don't want to lose that.
	(cwdr_inner_body): Renamed from cwdr_body.
	(cwdr_outer_body): New function, to establish the user's handler,
	and pass control to cwdr_inner_body.
	(cwdr): Establish the reliable catch-all handler here, and pass
	control to cwdr_outer_body.
	(struct cwdr_body_data): New field, handler, to allow cwdr to pass
	the user's handler through to cwdr_outer_body.
	* throw.c (scm_handle_by_message): Move guts into....
	(handler_message): New static function.
	(scm_handle_by_message_noexit): New function.
	* throw.h (scm_handle_by_message_noexit): New prototype.

	* __scm.h: (SCM_FENCE): New macro: optimizer will not move code