@@ -1,3 +1,10 @@
+Fri Jun 27 20:36:35 1997  Tim Pierce  <twpierce@bio-5.bsd.uchicago.edu>
+
+	* Makefile.am (libguile_la_LIBADD): Include @ALLOCA@.
+	(MOSTLYCLEANFILES): New target, changed from CLEANFILES.
+	(CLEANFILES): New target, clean versiondat.h, libpath.h.
+	(DISTCLEANFILES): New target, clean *.x.
+
 Tue Jun 24 00:29:07 1997  Jim Blandy  <jimb@floss.red-bean.com>
 
 	* script.c (scm_compile_shell_switches): Add 1997 to copyright
